--- a/src/index.css
+++ b/src/index.css
@@ -411,7 +411,7 @@ img {
 
 .intro-section {
   background: var(--bg-white);
-  padding: var(--space-12) 0;
+  padding: var(--space-12) 0 var(--space-4);
   text-align: center;
 }
 
@@ -419,7 +419,7 @@ img {
   font-size: 1.25rem;
   color: var(--text-secondary);
   max-width: 700px;
-  margin: var(--space-8) auto 0;
+  margin: var(--space-12) auto 0;
   line-height: 1.7;
 }
 
